--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
           <ul>
             <li>
-              <a href="">Furniture</a>
+              <a href="index.html">Furniture</a>
             </li>
             <li>
               <a href="">Lighting</a>
@@ -36,25 +36,35 @@
             <p class="searchP">Wtah can halp you find?</p>
             <img src="images/charm_search.svg" alt="" />
           </div>
-          <img src="images/mdi_user.svg" alt="" />
-          <img src="images/ion_cart.svg" alt="" />
+          <a href="">
+            <button class="icons">
+              <img src="images/mdi_user.svg" alt="" />
+            </button>
+          </a>
+          <a href="">
+            <button class="icons">
+              <img src="images/ion_cart.svg" alt="" />
+            </button>
+          </a>
         </div>
       </header>
       <!-- aside  -->
       <aside>
         <h3>Living Room Furniture</h3>
-        <p class="aside_text underline">Sofas</p>
-        <p class="aside_text">Loveseats</p>
-        <p class="aside_text">Sleeper Sofas</p>
-        <p class="aside_text">Sectionals</p>
-        <p class="aside_text">Reclining Furniture</p>
-        <p class="aside_text">Recliners</p>
-        <p class="aside_text">Futons</p>
+        <div class="aside_text">
+          <a href="" class="underline">Sofas</a>
+          <a href="">Loveseats</a>
+          <a href="">Sleeper Sofas</a>
+          <a href="">Sectionals</a>
+          <a href="">Reclining Furniture</a>
+          <a href="">Recliners</a>
+          <a href="">Futons</a>
+        </div>
       </aside>
       <!-- cover  -->
       <section class="cover_section">
-        <div class="cover_price">
-          <p>$399.00</p>
+        <div class="price_div">
+          <p class="price">$399.00</p>
           <button class="cover_button">Add to Cart</button>
         </div>
       </section>
@@ -70,8 +80,8 @@
           Lorem ipsum dolor sit amet consectetur. Viverra dolor sit amet.
         </p>
         <div class="card_divs">
-          <p>$399.00</p>
-          <button class="car_button">Add to Cart</button>
+          <p class="price">$399.00</p>
+          <button class="cart_button">Add to Cart</button>
         </div>
       </article>
       <article class="cards card2">
@@ -82,8 +92,8 @@
           Lorem ipsum dolor sit amet consectetur. Viverra dolor sit amet.
         </p>
         <div class="card_divs">
-          <p>$399.00</p>
-          <button class="car_button">Add to Cart</button>
+          <p class="price">$399.00</p>
+          <button class="cart_button">Add to Cart</button>
         </div>
       </article>
       <article class="cards card3">
@@ -94,8 +104,8 @@
           Lorem ipsum dolor sit amet consectetur. Viverra dolor sit amet.
         </p>
         <div class="card_divs">
-          <p>$399.00</p>
-          <button class="car_button">Add to Cart</button>
+          <p class="price">$399.00</p>
+          <button class="cart_button">Add to Cart</button>
         </div>
       </article>
       <article class="cards card4">
@@ -106,8 +116,8 @@
           Lorem ipsum dolor sit amet consectetur. Viverra dolor sit amet.
         </p>
         <div class="card_divs">
-          <p>$399.00</p>
-          <button class="car_button">Add to Cart</button>
+          <p class="price">$399.00</p>
+          <button class="cart_button">Add to Cart</button>
         </div>
       </article>
     </div>
